fix alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .ownertag {
     color: #fff;
+    left: 5px;
 }
 
 .ownertag-list {
